--- a/10/EcoDriving/EcoDriving/Resources/Translations.resx
+++ b/10/EcoDriving/EcoDriving/Resources/Translations.resx
@@ -117,20 +117,32 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Analyze" xml:space="preserve">
+    <value>ANALIZA PRZEJAZDU</value>
+  </data>
   <data name="Choose" xml:space="preserve">
     <value>Wybierz</value>
   </data>
   <data name="Confirm" xml:space="preserve">
     <value>Potwierdź</value>
   </data>
+  <data name="Date" xml:space="preserve">
+    <value>Data Przejazdu</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Opis Przejazdu</value>
+  </data>
   <data name="Draw" xml:space="preserve">
     <value>Rysuj</value>
+  </data>
+  <data name="FileLabel" xml:space="preserve">
+    <value>Dodano plik</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Szukaj</value>
   </data>
   <data name="ShowGraph" xml:space="preserve">
-    <value>Rysuj Wykres</value>
+    <value>Rysuj Przykładowy Wykres</value>
   </data>
   <data name="UserName" xml:space="preserve">
     <value>Imie użytkownika</value>
