--- a/10/EcoDriving/EcoDriving/Resources/Translations.resx
+++ b/10/EcoDriving/EcoDriving/Resources/Translations.resx
@@ -120,6 +120,9 @@
   <data name="Analyze" xml:space="preserve">
     <value>ANALIZA PRZEJAZDU</value>
   </data>
+  <data name="Analyze2" xml:space="preserve">
+    <value>ANALIZA PORÓWNAWCZA</value>
+  </data>
   <data name="Choose" xml:space="preserve">
     <value>Wybierz</value>
   </data>
